# pratice

./: MLDL과제 - 이창하.ipynb  README.md  index.md
CWorkSpace/: README.md  ex01-HelloWorld.cpp
CWorkSpace/Basic/: 01-HelloWorld.cpp  03-다양한 데이터 출력.cpp  04-1-변수.cpp  04-2-변수.cpp  05-1-자료형.cpp  06-1-sizeof.cpp  06-2-변수(정수형, 실수형).cpp  06-3-형변환.cpp  07-1-scanf.cpp  08-1-char, ASCII code.cpp  08-2-char-ASCII 변환.cpp  09-1-exampleSum.cpp  09-2-exampleBMI.cpp  09-3-exampleAlphabet.cpp  10-1-등호.cpp  10-2-대입연산자.cpp  10-3-증감연산자.cpp  10-4-전치와 후치.cpp  11-1-비교연산자.cpp  11-2-논리연산자.cpp  12-1-if.cpp  12-2-exampleIf.cpp  12-3-elseif.cpp  13-1-exampleIf.cpp  14-1-switch.cpp  14-2-goto.cpp  15-1-while.cpp  15-2-do-while.cpp  15-3-EndlessLoop.cpp  15-4-exampleDoWhile.cpp  16-1-for.cpp  16-2-exampleFor.cpp  16-3-exampleFor.cpp  16-4-exampleFor.cpp  17-1-EndlessLoopFor.cpp  17-2-exampleFor.cpp  17-3-exampleFor.cpp  17-3.cpp  18-1-ForBreak.cpp  18-2-ForContinue.cpp  (+105 more)
CWorkSpace/CSharpBasic/: README.MD
CWorkSpace/MFC/: ArrayTest1.cpp  ArrayTest2.cpp  HelloMFC.cpp  ListTest1.cpp  ListTest2.cpp  MainFrm.cpp  MainFrm.h  MapTest1.cpp  README.md  mfc_test11_menu1.h  mfc_test11_menu1.sln  mfc_test11_menu1.vcxproj  mfctest11menu1.rc  resource.h
CWorkSpace/OpenCascade/: 1.txt  README.MD  Viewer.h
CWorkSpace/OpenCascade/Chapter0_Test/: CMakeLists.txt  README.md  chapter0.cpp  cuttedBox.stp
CWorkSpace/OpenCascade/Lesson11_OCAF_interfaces/: CMakeLists.txt  Lesson11_OCAF_interfaces.sln  Lesson11_OCAF_interfaces.vcxproj  README.md  main.cpp
CWorkSpace/OpenCascade/Lesson12_XDE/: CMakeLists.txt  DisplayScene.cpp  DisplayScene.h  Lesson12_XDE.sln  Lesson12_XDE.vcxproj  README.md  Viewer.h  ViewerInteractor.h  main.cpp
CWorkSpace/OpenCascade/Lesson14_intersect_polygons/: CMakeLists.txt  Lesson14_intersect_polygons.sln  Lesson14_intersect_polygons.vcxproj  README.md  Viewer.cpp  ViewerInteractor.cpp  main.cpp
CWorkSpace/OpenCascade/Lesson_10_OcafEx/: CMakeLists.txt  Lesson_10_OcafEx.sln  Lesson_10_OcafEx.vcxproj  README.md  main.cpp
CWorkSpace/Unity/: LifeCycle.cs
CWorkSpace/boj/: boj10250-ACM호텔.cpp  boj10809-알파벳찾기-2.cpp  boj10809-알파벳찾기.cpp  boj10818-최소최대.cpp  boj1085-직사각형_탈출.cpp  boj1085-직사각형_탈출_2.cpp  boj1085-직사각형_탈출_3.cpp  boj10870-피보나치_수.cpp  boj10871-X보다 작은 수.cpp  boj10872-팩토리얼.cpp  boj10872-팩토리얼2.cpp  boj10872-팩토리얼3.cpp  boj10950-합.cpp  boj10952-while합.cpp  boj11022-합.cpp  boj1110-더하기 사이클.cpp  boj11653-소인수분해.cpp  boj11654-아스키코드.cpp  boj11720-숫자의합.cpp  boj11729-하노이_탑.cpp  boj1193-분수찾기.cpp  boj1330-두 수 비교하기.cpp  boj1330.cpp  boj14681-Quadrant n.cpp  boj1546-평균.cpp  boj15595-정수n개의합.cpp  boj1712-손익분기점.cpp  boj1978-소수찾기.cpp  boj2292-벌집.cpp  boj2438-별찍기1.cpp  boj2439-별찍기2.cpp  boj2447-별찍기.cpp  boj2577-숫자의 개수.cpp  boj2581-소수.cpp  boj2739-구구단.cpp  boj2741-N찍기.cpp  boj2742-기찍N.cpp  boj2753-윤년.cpp  boj2775-사람 수 구하기.cpp  boj2839-설탕배달.cpp  (+13 more)
CWorkSpace/cppBasic/: 49-1-input.cpp  49-1-output.cpp  49-2-input.cpp  49-3-string.cpp  49-4-stringEx.cpp  50-1-variable.cpp  50-2-arrFor.cpp  50-2.cpp  50-3-referenceVariable.cpp  51-1-functionOverload.cpp  51-2-functionOverload.cpp  51-3-functionDefault.cpp  52-1-inputOutputEx.cpp  52-2-2DarrayEx.cpp  53-1-namespace.cpp  53-2-식별자검색.cpp  53-3-namespace.cpp  54-1-class.cpp  55-1-thisPtr.cpp  56-1-객체생성소멸.cpp  56-2-compleNumEx.cpp  57-1-생성자.cpp  57-2-생성자위임.cpp  58-1-static.cpp  59-1-static.cpp  60-1-methodConst.cpp  61-1-methodStaticDynamic.cpp  62-1-operator.cpp  63-1-namespaceEx.cpp  63-2-classEx.cpp  63-2-methodEx.cpp  64-1-Ex.cpp  65-1-동적할당.cpp  65-2-배열동적할당.cpp  65-3-객체동적할당.cpp  66-1-깊은복사얕은복사.cpp  66-2-깊은복사얕은복사.cpp  67-1-복사생성자오버로딩.cpp  68-1-대입연산자오버로딩.cpp  71-1-묵시적 형변환.cpp  (+87 more)
CWorkSpace/example/: calculator-ver0.cpp
Computer_vision/: OCR_Captcha_Cracker.ipynb  img_classification_ResNet_ImageNet.ipynb
Deeplearning/: img_classification.ipynb
PythonWorkSpace/: README.md  Thumbs.db  starcraft.ipynb  starcraft.py
PythonWorkSpace/MLDL/: Linear regression.ipynb  Logistic Classification 구현.ipynb  Multi-variable linear regression.ipynb  Softmax Classification.ipynb  Tensorflow - CNN CIFAR10 v2.ipynb  Tensorflow - CNN CIFAR10.ipynb  Tensorflow - Deep Learning MNIST Example.ipynb  Tensorflow - Deep leaning basic.ipynb  Tensorflow - Fashion MNIST.ipynb  Tensorflow - Functional API.ipynb  Tensorflow - GRU 주가 예측.ipynb  Tensorflow - Image Data Augmentation.ipynb  Tensorflow - LSTM 주가 예측 example.ipynb  Tensorflow - Linear Regression (2).ipynb  Tensorflow - Loading data from file.ipynb  (+6 more)
project/: OCR_Captcha_Cracker.ipynb  README.MD  img_classification_ResNet_ImageNet.ipynb
(+947 files in other folders)
